[package]
name = "inventree"
version = "453.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "API for InvenTree - the intuitive open source inventory management system"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "stream", "query", "form"] }
bon = { version = "2.3", optional = true }
[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
bon = ["dep:bon"]
